--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "my-expo-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build-web": "npx expo export:web"
+  },
+  "dependencies": {
+    "expo": "^43.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
+    "react-native-web": "^0.17.1"
+  },
   "devDependencies": {
-    "expo-cli": "^6.3.10"
-  }
+    "babel-preset-expo": "8.4.1"
+  },
+  "private": true
 }
