--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-expo-app",
+  "name": "language-exam",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "react-native-web": "^0.17.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "8.4.1"
+    "expo-cli": "^6.3.10"
   },
   "private": true
 }
