--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "expo": "^43.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react-dom": "18.2.0",
     "react-native": "0.64.2",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "expo-cli": "^6.3.10"
