--- a/language-exam/package.json
+++ b/language-exam/package.json
@@ -13,9 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-native-web": "~0.18.10"
   },
   "scripts": {
     "start": "react-scripts start",
