--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
   "name": "language-exam",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build-web": "npx expo export:web"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "expo": "^43.0.0",
-    "react": "17.0.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.4.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "react": "^18.3.1",
     "react-dom": "18.2.0",
-    "react-native": "0.64.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
     "react-native-web": "~0.18.10"
   },
-  "devDependencies": {
-    "expo-cli": "^6.3.10"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "private": true
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
