--- a/language-exam/package.json
+++ b/language-exam/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-native-web": "~0.18.10",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-native-web": "~0.18.10"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
